<?xml version="1.0" encoding="utf-8"?>

<!-- @author Karim Abou Zeid (kabouzeid)

This file is part of Music App.

Music App is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Music App is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Music App.  If not, see <https://www.gnu.org/licenses/>.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DrawerActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_shuffle_all"
        android:title="@string/action_shuffle_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_grid_size"
        android:title="@string/action_grid_size">
        <menu>
            <group
                android:checkableBehavior="single"
                tools:ignore="HardcodedText">
                <item
                    android:id="@+id/action_grid_size_1"
                    android:title="@string/grid_size_1" />
                <item
                    android:id="@+id/action_grid_size_2"
                    android:title="@string/grid_size_2" />
                <item
                    android:id="@+id/action_grid_size_3"
                    android:title="@string/grid_size_3" />
                <item
                    android:id="@+id/action_grid_size_4"
                    android:title="@string/grid_size_4" />
                <item
                    android:id="@+id/action_grid_size_5"
                    android:title="@string/grid_size_5" />
                <item
                    android:id="@+id/action_grid_size_6"
                    android:title="@string/grid_size_6" />
                <item
                    android:id="@+id/action_grid_size_7"
                    android:title="@string/grid_size_7" />
                <item
                    android:id="@+id/action_grid_size_8"
                    android:title="@string/grid_size_8" />
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_sort_order"
        android:title="@string/action_sort_order">
        <menu></menu>
    </item>

    <item
        android:id="@+id/action_colored_footers"
        android:checkable="true"
        android:title="@string/colored_footers" />

</menu>
