<?xml version="1.0" encoding="utf-8"?>

<!-- @author Karim Abou Zeid (kabouzeid)

This file is part of Music App.

Music App is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Music App is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Music App.  If not, see <https://www.gnu.org/licenses/>.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_play_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_current_playing"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_to_album"
        android:title="@string/action_go_to_album"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_go_to_artist"
        android:title="@string/action_go_to_artist"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tag_editor"
        android:title="@string/action_tag_editor"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_details"
        android:title="@string/action_details"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_as_ringtone"
        android:title="@string/action_set_as_ringtone"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_from_device"
        android:title="@string/action_delete_from_device"
        app:showAsAction="never" />
</menu>
