<?xml version="1.0" encoding="utf-8"?>

<!-- @author Karim Abou Zeid (kabouzeid)

This file is part of Music App.

Music App is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Music App is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Music App.  If not, see <https://www.gnu.org/licenses/>.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_play"
        android:title="@string/action_play" />

    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_play_next" />

    <item
        android:id="@+id/action_add_to_current_playing"
        android:title="@string/action_add_to_playing_queue" />

    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist" />

    <item
        android:id="@+id/action_clear_playlist"
        android:title="@string/action_clear_playlist" />

    <item
        android:id="@+id/action_save_playlist"
        android:title="@string/save_playlist_title" />
</menu>
