<?xml version="1.0" encoding="utf-8"?>

<!-- @author Karim Abou Zeid (kabouzeid)

This file is part of Music App.

Music App is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Music App is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Music App.  If not, see <https://www.gnu.org/licenses/>.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="app.musicapp.music.ui.activities.PlaylistDetailActivity">

    <item
        android:id="@+id/action_shuffle_playlist"
        android:icon="@drawable/ic_shuffle_white_24dp"
        android:title="@string/action_shuffle_playlist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_play"
        android:title="@string/action_play"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_play_next"
        android:title="@string/action_play_next"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_current_playing"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_to_playlist"
        android:title="@string/action_add_to_playlist" />
    <item
        android:id="@+id/action_save_playlist"
        android:title="@string/save_playlist_title"
        app:showAsAction="never" />

</menu>
