<?xml version="1.0" encoding="utf-8"?>

<!-- @author Karim Abou Zeid (kabouzeid)

This file is part of Music App.

Music App is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Music App is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Music App.  If not, see <https://www.gnu.org/licenses/>.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_toggle_favorite"
        android:icon="@drawable/ic_favorite_border_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_add_to_favorites"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_clear_playing_queue"
        android:orderInCategory="1"
        android:title="@string/action_clear_playing_queue"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_playing_queue"
        android:orderInCategory="1"
        android:title="@string/action_save_playing_queue"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sleep_timer"
        android:orderInCategory="1"
        android:title="@string/action_sleep_timer"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_equalizer"
        android:orderInCategory="99"
        android:title="@string/equalizer"
        app:showAsAction="never" />
</menu>
