<?xml version="1.0" encoding="utf-8"?>

<!-- @author Karim Abou Zeid (kabouzeid)

This file is part of Music App.

Music App is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Music App is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Music App.  If not, see <https://www.gnu.org/licenses/>.-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_play_next"
        android:icon="@drawable/ic_redo_white_24dp"
        android:title="@string/action_play_next"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_to_current_playing"
        android:icon="@drawable/ic_library_add_white_24dp"
        android:title="@string/action_add_to_playing_queue"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_to_playlist"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        android:title="@string/action_add_to_playlist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@id/action_multi_select_adapter_check_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        android:title="@string/select_all_title"
        app:showAsAction="ifRoom" />

</menu>
